@@ -17,10 +17,10 @@
                 <configuration>
                     <source>1.10</source>
                     <target>1.10</target>
-                    <compilerArgs>
-                        <arg>--add-exports=java.base/jdk.internal=tools.jar</arg>
+                    <!--<compilerArgs>
+                        <arg>&#45;&#45;add-exports=java.base/jdk.internal=tools.jar</arg>
                         <arg>-parameters</arg>
-                    </compilerArgs>
+                    </compilerArgs>-->
                 </configuration>
             </plugin>
 
